dodal Aljoša kontakt kontakt.html

--- a/kontakt.html
+++ b/kontakt.html
@@ -7,5 +7,9 @@
     <h1>Moj kontakt</h1>
     <p>Ime: Zan Korpar</p>
     <p>Email: zan.korpar1@student.um.si</p>
+
+    <h1>Kontakt direktorja</h1>
+    <p>Ime: Aljoša Gašper Kupčič</p>
+    <p>Email: aljosa.kupcic@student.um.si</p>
 </body>
 </html>
